# ObjectLocation_udp

./: .gitignore  CMakeLists.txt  ReadMe  TimeTest.cpp  client.cpp  server.cpp  图像输出协议.docx  目标输出协议.docx
include/img/modules/: imgProcess.h
include/modules/: pkgProcess.h  pkgProcess.inl  processFrament.h  sendFrament.hpp
include/pkg/modules/: pkgProcess.h  processPkgFrament.h
include/utils/: logger.h  protocol.h  protocol.inl  sendFrament.h  sendFrament.hpp  threadsafe_queue.h  udp_operation.h
src/img/app/: CMakeLists.txt  imgServer.cpp  imgTest.cpp
src/img/modules/: imgProcess.cpp
src/modules/: pkgProcess.cpp  processFrament.cpp
src/pkg/app/: CMakeLists.txt  pkgClient.cpp  pkgServer.cpp
src/pkg/modules/: pkgProcess.cpp  processPkgFrament.cpp
src/utils/: protocol.cpp  sendFrament.cpp  udp_operation.cpp
